--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -26,6 +26,7 @@
 \newcommand{\tab}[1]{{表~\ref{tab:#1}}}
 \newcommand{\refchap}[1]{{第~\ref{sec:#1}~章}}
 \newcommand{\refsec}[1]{{\ref{sec:#1}~節}}
+\newcommand{\refapp}[1]{{付録~\ref{sec:#1}}}
 \newcommand{\ctext}[1]{\textcircled{\scriptsize{#1}}}
 
 % 脚注が 1 ページに表示されるようにする
@@ -89,6 +90,7 @@
 \appendix
 \include{src/appendix1}
 \include{src/appendix2}
+\include{src/appendix3}
 
 % 発表実績（なければコメントアウトしておく）
 \include{src/publication}
