--- a/thesis/src/segment_IQ.tex
+++ b/thesis/src/segment_IQ.tex
@@ -173,20 +173,12 @@ SVSD の回路図を\fig{SVSD}に示す．SVSD はデスティネーション・
   \item 命令のソース・タグは 50\% の確率でディスパッチ時にレディであるとする．つまり，(NR，NR)，(R，NR)，(NR，R)，(R，R) である命令の数は全て等しいとする．
   \item 提案手法による IQ の容量効率の低下（詳しくは\refsec{switch}で説明する）は全く生じないとする．
 \end{enumerate}
-上記の仮定をおいた場合に，提案手法を使用した場合のタグ比較回数は，以下の式で計算することができる．
+上記の仮定をおいた場合に，提案手法を使用した場合のタグ比較回数は，以下の式で計算することができる（式の導出は\refapp{appendix1}で示す）．
 
 \[
   \frac{3}{4}\times\frac{1}{M\_seg} + \frac{1}{4}\times\frac{1}{S\_seg}
 \]
 ここで，$M\_seg$ はメイン・セグメント数を， $S\_seg$ はサブ・セグメント数を表す．なお，サブ・セグメントを使用しない場合は，$M\_seg$ をセグメント数とし，$S\_seg = 1 $ として計算すれば良い．
-
-% \fig{comp_estimate}を用いて説明する．同図の左側は，（16，1）の場合における，ディスパッチ時のソース・タグの状態ごとのタグ比較回数を表したものである．灰色のエントリは既にレディなソース・オペランドであり，比較が行われないことを表し，白色のエントリは比較が行われることを表す．（R，R）の場合どちらのタグも比較は行われず，（NR，R）と（R，NR）の場合はレディでない方のタグで比較が行われる．そして（NR，NR）の場合はどちらのタグも比較が行われる．
-
-% 白色のエントリ内には，セグメント化しない場合と比較してどれだけタグ比較が行われるかを分数の形式で示している．例えば\ctext{1}の場合，第 1 ソース・タグの比較回数はセグメント化によって 1/16 まで削減される．(R，NR)の場合にはスワップが行われるため，\ctext{2}も 1/16 となる．また，\ctext{3}も同様に 1/16 となるが，\ctext{4} はタグ比較回数が削減できないため，セグメント化しない場合と同じタグ比較回数（1/1）となる．
-
-% 1 つめの仮定より\ctext{1}から\ctext{4}までの比較回数はすべて同じであると考えられるため，比較回数の合計は\fig{comp_estimate} の左下の式で計算することができ，30\% となる．
-
-% \fig{comp_estimate}の右側で，（8，2）の場合に関して同様の計算を行っている．サブ・セグメントを使用するため，\ctext{4}においてタグ比較回数が 1/2 となっていることが特徴である．計算の結果，タグ比較回数は 22\% となる．（16，1）と（8，2）を比較すると，セグメントの総数が同じであるが，タグ比較回数は（8，2）の方が少なくなっていることがわかる．これは \ctext{4}において，（16，1）では削減できないタグ比較回数が，（8，2）では削減できることが大きな要因である．
 
 この式を用いて，本論文にて評価を行った全てのセグメント数の組み合わせにおけるタグ比較回数の概算を行った．その結果を\tab{comp_estimate}に示す．表に示しているタグ比較回数は，セグメント化しない通常の IQ に対する相対タグ比較回数を \% 形式で示している．
 
