--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -305,7 +305,7 @@ pages = {334--346},
 }
 
 @inproceedings{Jimenez2001,
-  author={D. A. {Jimenez} and C. {Lin}},
+  author={D. A. {Jim\'{e}nez} and C. {Lin}},
   booktitle={Proceedings of Seventh International Symposium on High-Performance Computer Architecture}, 
   title={Dynamic Branch Prediction with Perceptrons}, 
   year={2001},
