--- a/thesis/src/segment_IQ.tex
+++ b/thesis/src/segment_IQ.tex
@@ -180,7 +180,7 @@ SVSD の回路図を\fig{SVSD}に示す．SVSD はデスティネーション・
 \]
 ここで，$M\_seg$ はメイン・セグメント数を， $S\_seg$ はサブ・セグメント数を表す．なお，サブ・セグメントを使用しない場合は，$M\_seg$ をセグメント数とし，$S\_seg = 1 $ として計算すれば良い．
 
-この式を用いて，本論文にて評価を行った全てのセグメント数の組み合わせにおけるタグ比較回数の概算を行った．その結果を\tab{comp_estimate}に示す．表に示しているタグ比較回数は，セグメント化しない通常の IQ に対する相対タグ比較回数を \% 形式で示している．
+この式を用いて，本論文にて評価を行った全てのセグメント数の組み合わせにおける，タグ比較回数の概算を行った．その結果を\tab{comp_estimate}に示す．表に示しているタグ比較回数は，セグメント化しない通常の IQ に対する相対タグ比較回数を \% 形式で示している．
 
 なお，以降の説明において，（メイン・セグメント数，サブ・セグメント数） の形式でセグメント数を表記する．また，サブ・セグメントを使用しない場合は，サブ・セグメント数は 1 と表記する．例えば，サブ・セグメントを使用せず，セグメント数を 16 とする場合は（16，1）と表記し，サブ・セグメントを使用し，メイン・セグメント数を 8 ，サブ・セグメント数を 2 とする場合（8，2）と表記する．
 
