--- a/thesis/src/summary.tex
+++ b/thesis/src/summary.tex
@@ -3,6 +3,6 @@
 \label{sec:summary}
 LSIの微細化の進展に伴って，経年劣化が加速し摩耗故障が増加する問題が深刻になっている．この故障は，デバイスの温度に関して指数関数的に加速するため，チップ内のホット・スポットの解消が求められている．
 
-発行キューはこのホット・スポットの 1 つとして知られている．この主な原因はウェイクアップ時の多数のタグ比較である．本論文では，ウェイクアップ時のタグ比較回数を削減するために，発行キューをセグメント化する方法を提案した．また，提案手法におけるタグ比較削減の効果を高める手法であるスワップとサブ・セグメント及び，提案手法によって生じる性能低下を抑制する手法である SWITCH 方式を合わせて提案した．
+発行キューはこのホット・スポットの 1 つとして知られている．この主な原因はウェイクアップ時の多数のタグ比較である．本論文では，ウェイクアップ時のタグ比較回数を削減するために，発行キューをセグメント化する方法を提案した．また，提案手法におけるタグ比較回数削減の効果を高める手法であるスワップとサブ・セグメント及び，提案手法によって生じる性能低下を抑制する手法である SWITCH 方式を合わせて提案した．
 
 提案手法を SPEC CPU 2017 を使って評価したところ，性能低下を最大でも 5\% 以下に抑えつつ，タグ比較回数を 82\% 削減できることを確認した．
