--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -315,7 +315,7 @@ pages = {334--346},
 
 @INPROCEEDINGS{Motomura1990paper,
   author={M. {Motomura} and J. {Toyoura} and K. {Hirata} and H. {Ooka} and H. {Yamada} and T. {Enomoto}},
-  booktitle={1990 37th IEEE International Conference on Solid-State Circuits},   
+  booktitle={Proceedings of 1990 37th IEEE International Conference on Solid-State Circuits},   
   title={A 1.2-million Transistor, 33 {MHz}, 20-bit Dictionary Search Processor with a 160 kb {CAM}},   
   pages={90-91},
 }
@@ -395,12 +395,12 @@ pages={2081-2094},
 month={Nov},
 }
 
-@Misc{kobayashi-thesis,
-  author = 	 {小林誠弥},
+@inproceedings{kobayashi-thesis,
+  author = 	 {小林誠弥，塩谷亮太，安藤秀樹},
   title = 	 {発行キューにおけるタグの2段階比較による消費エネルギー削減},
-  howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
-  OPTmonth = 	 {},
-  year = 	 {2015年3月},
+  booktitle = {2013年先進的計算基盤システムシンポジウムSACSIS},
+  year = 	 {2013年5月},
+  pages = 	 {2-9},
 }
 
 @Misc{matsuda-thesis,
@@ -423,7 +423,7 @@ month={Nov},
 @InProceedings{Butler1992,
   author = 	 {M. Butler and Y. Patt},
   title = 	 {An Investigation of the Performance of Various Dynamic Scheduling Techniques},
-  booktitle = {Proceedings of the 25th Annual IEEE/ACM International Symposium on Microarchitecture},
+  booktitle = {Proceedings of the 25th Annual International Symposium on Microarchitecture},
   year = 	 {1992},
   pages = 	 {1-9},
   month = 	 {December},
