--- a/thesis/src/introduction.tex
+++ b/thesis/src/introduction.tex
@@ -5,16 +5,16 @@
 
 プロセッサ・チップ上には，ホット・スポットと呼ばれる単位面積あたりの電力が大きい場所が存在する．ホット・スポットは，そうでない場所と比べて温度上昇が激しいため，上述した故障を引き起こす確率が高くなる．従って，ホット・スポットを生成する回路の消費電力を低下させる必要がある．
 
-ホット・スポットを生成する回路の１つに，発行キューがある．発行キューのサイズはプロセッサの世代が進むごとに大きくなっており，より深刻なホット・スポットとなっている．従って，発行キューの電力削減に対する要求は非常に大きい．
+ホット・スポットを生成する回路の１つに，発行キュー（IQ: issue queue）がある．IQ のサイズはプロセッサの世代が進むごとに大きくなっており，より深刻なホット・スポットとなっている．従って，発行キューの電力削減に対する要求は非常に大きい．
   
-発行キューの中で最も電力を消費する回路は，タグ比較の回路である．タグ比較は，発行幅分のデスティネーション・タグとすべてのソース・タグとの間で行われるため，非常に多くの電力を消費する．そこで本論文では，タグ比較器が動作する回数を削減する以下のような手法を提案する．
+IQ の中で最も電力を消費する回路は，タグ比較の回路である．タグ比較は，発行幅分のデスティネーション・タグとすべてのソース・タグとの間で行われるため，非常に多くの電力を消費する．そこで本論文では，タグ比較器が動作する回数を削減する以下のような手法を提案する．
 \begin{itemize}
-  \item 発行キューを複数の\textbf{セグメント}に分割する．命令を発行キューにディスパッチする際，第 1 ソース・タグの下位ビットが $n$ である命令は，第 $n$ 番目のセグメントに書き込む．タグ比較時には，デスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグの比較を行う．一致しないセグメントでは比較が行われない．これによりタグ比較回数が削減される．
+  \item IQ を複数の\textbf{セグメント}に分割する．命令を IQ にディスパッチする際，第 1 ソース・タグの下位ビットが $n$ である命令は，第 $n$ 番目のセグメントに書き込む．タグ比較時には，デスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグの比較を行う．一致しないセグメントでは比較が行われない．これによりタグ比較回数が削減される．
   \item 上記の方法では，第 2 ソース・タグの比較回数は削減されない．そこで提案手法では\textbf{スワップ}と\textbf{サブ・セグメント}と呼ぶ 2 つの方法を導入し，第 2 ソース・タグの比較回数も削減する．スワップは，ディスパッチ時に第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない命令において，第 1 ソース・タグと第 2  ソース・タグを格納するフィールドを交換し，第 2 ソース・タグの下位ビットを用いてディスパッチするセグメントを決定する手法である．サブ・セグメントは，各セグメントを第 2 ソース・タグに基づきさらに分割する手法である．
-  \item セグメント化によりディスパッチできるエントリが制限されるため，発行キューの容量効率が低下し，容量に敏感なプログラムにおいて性能が低下するという問題が存在する．この問題に対応するため，本論文では \textbf{SWITCH} という手法を提案する．SWITCH では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較回数の削減を重視したディスパッチ・アルゴリズムを，容量効率の重要性に応じて切り替えて使用することにより，性能低下を抑制する．
+  \item セグメント化によりディスパッチできるエントリが制限されるため，発行キューの容量効率が低下し，容量に敏感なプログラムにおいて性能が低下するという問題が生じる．この問題に対応するため，本論文では \textbf{SWITCH} という手法を提案する．SWITCH では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較回数の削減を重視したディスパッチ・アルゴリズムを，容量効率の重要性に応じて切り替えて使用することにより，性能低下を抑制する．
 \end{itemize}
 
 提案手法を SPEC CPU 2017 ベンチマークを用いて評価し，性能低下を 最大でも 5\% 以下に抑えつつ，タグ比較の回数を平均で 82\% 削減できることを確認した．
 
-本論文の残りの構成は次の通りである．まず，\refchap{related_work}で関連研究を説明し， \refchap{basic_IQ}で発行キューの基本的な事項を説明する．そして，\refchap{segment_IQ}で提案手法の基本となるアイデアに関して説明したあと，\refchap{switch}で提案手法の問題点である発行キューの容量効率の低下とその対策方法を説明する．\refchap{eval}で評価を行い，\refchap{summary}でまとめる．\refapp{appendix1}と\refapp{appendix2}で本論文の補足事項を説明し，\refapp{appendix3}で提案手法の未解決の課題に関して説明する．
+本論文の残りの構成は次の通りである．まず，\refchap{related_work}で関連研究を説明し， \refchap{basic_IQ}で IQ の基本的な事項を説明する．そして，\refchap{segment_IQ}で提案手法の基本となるアイデアに関して説明したあと，\refchap{switch}で提案手法の問題点である IQ の容量効率の低下とその対策方法を説明する．\refchap{eval}で評価を行い，\refchap{summary}でまとめる．\refapp{appendix1}と\refapp{appendix2}で本論文の補足事項を説明し，\refapp{appendix3}で提案手法の未解決の課題に関して説明する．
 
