--- a/thesis/src/publication.tex
+++ b/thesis/src/publication.tex
@@ -1,6 +1,5 @@
 
 \chapter*{発表実績}
 \addcontentsline{toc}{chapter}{発表実績}
-\begin{itemize}
-  \item 森健一郎, 安藤秀樹, ``容量効率を意識したソース・タグ値に基づくセグメント化による発行キューのエネルギー削減'', 情報処理学会研究報告, Vol.2020-ARC-241, No.3, pp.1-12, 2020年7月
-\end{itemize}
+\noindent
+  森健一郎，安藤秀樹，``容量効率を意識したソース・タグ値に基づくセグメント化による発行キューのエネルギー削減，'' 情報処理学会研究報告，Vol.2020-ARC-241，No.3，pp.1-12，2020年7月．
