--- a/thesis/src/related_work.tex
+++ b/thesis/src/related_work.tex
@@ -1,7 +1,7 @@
 
 \chapter{関連研究}
 \label{sec:related_work}
-本章では，発行キュー（IQ：Issue Queue)に関連する研究について述べる．\refsec{relate_IQ}で IQ に関する一般的な関連研究に関して説明し，\refsec{relate_energy} で IQ の研究のうち，電力に関係する研究を述べる．
+本章では，IQ に関連する研究について述べる．\refsec{relate_IQ}で IQ に関する一般的な関連研究に関して説明し，\refsec{relate_energy} で IQ の研究のうち，電力に関係する研究を述べる．
 
 \section{IQ に関する関連研究}
 \label{sec:relate_IQ}
