--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -15,9 +15,10 @@
   OPTmonth = 	 {},
 }
 
-@Book{Weste2010,
+@book{Weste2010,
   author =	 {N. H. E. Weste and D. M. Harris},
-  title = 	 {{CMOS VLSI} Design: A Circuits and Systems Perspective, 4th edition},
+  title = 	 {{CMOS VLSI} Design: A Circuits and Systems Perspective},
+  edition = 4,
   publisher = 	 {Addition Wesley},
   year = 	 {2010}
 }
@@ -395,7 +396,7 @@ pages={2081-2094},
 month={Nov},
 }
 
-@inproceedings{kobayashi-thesis,
+@inproceedingsjpn{kobayashi-thesis,
   author = 	 {小林誠弥，塩谷亮太，安藤秀樹},
   title = 	 {発行キューにおけるタグの2段階比較による消費エネルギー削減},
   booktitle = {2013年先進的計算基盤システムシンポジウムSACSIS},
