--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -9,6 +9,7 @@
 \usepackage[dvipdfmx]{hyperref}
 \usepackage{pxjahyper}
 \usepackage{amsmath,amssymb}
+\usepackage{siunitx}
 
 % ヘッダを追加する
 \pagestyle{headings}
