--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -442,3 +442,10 @@ month={Nov},
   author = {International Technology Roadmap for Semiconductors},
   howpublished = {http://www.itrs2.net/},
 }
+
+@inproceedingsjpn{Mark1983,
+  author = 	 {M. A. Horowitz},
+  title = 	 {Timing Models for {MOS} Circuits},
+  booktitle = {Technical Report SEL83-003, Integrated Circuits Laboratory, Stanford University},
+  year = 	 {1983},
+}
